@@ -210,6 +210,7 @@ along with this software (see the LICENSE.md file). If not, see
             <description>The username used along with the password to login</description></field>
         <field name="userFullName" type="text-medium"><description>User's first, middle, last, etc name</description></field>
         <field name="currentPassword" type="text-medium"/>
+        <field name="resetPassword" type="text-medium"><description>Set to random password for password reset, can be used only to update password</description></field>
         <field name="passwordSalt" type="text-medium"/>
         <field name="passwordHashType" type="text-short"/>
         <field name="passwordSetDate" type="date-time"/>
