@@ -14,8 +14,12 @@ along with this software (see the LICENSE.md file). If not, see
 <screen xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://moqui.org/xsd/xml-screen-1.5.xsd">
     <widgets>
         <render-mode><text type="html"><![CDATA[<html><body>]]></text></render-mode>
-        <container><label text="Your password has been changed to: ${newPassword}"/></container>
-        <container><label text="Please use this new password to change your password immediately."/></container>
+        <container><label text="Your reset password has been set to: ${resetPassword}"/></container>
+        <container><label text="Please use this reset password to change your password immediately."/></container>
+        <container><label text="Your current password is still valid and may be used to change your password, this reset password may only be used to change your password."/></container>
+        <section name="RequireChangeSection" condition="userAccount.requirePasswordChange == 'Y'"><widgets>
+            <container><label text="Your password must be changed before login."/></container>
+        </widgets></section>
         <render-mode><text type="html"><![CDATA[</body></html>]]></text></render-mode>
     </widgets>
 </screen>
